Fix bug sidebar hover is jumpy when results expanded

--- a/algolia_restaurant_search/src/App.css
+++ b/algolia_restaurant_search/src/App.css
@@ -299,7 +299,7 @@ a {
   justify-content: space-between;
   padding: 0.2rem 1.4rem 0.2rem 1.1rem;
   border-radius: 0.3rem;
-  width: 100%;
+  width: 16rem;
   margin: 0.1rem 0; }
   .sidebar-section-item:hover {
     background-color: #c6e6f3; }
