--- a/algolia_restaurant_search/src/styles/modules/_sidebar_section_item.scss
+++ b/algolia_restaurant_search/src/styles/modules/_sidebar_section_item.scss
@@ -4,7 +4,7 @@
   justify-content: space-between;
   padding: 0.2rem 1.4rem 0.2rem 1.1rem;
   border-radius: 0.3rem;
-  width: 100%;
+  width: 16rem;
   margin: 0.1rem 0;
 
   &:hover {
